# GAToolKit

./: 2DKnapsackGA.cpp  CMakeLists.txt  GAToolKit.kdev4  GeneticsAlgorithem.cpp  KnapsackGA.cpp
